Update author name in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ol>
     <h4  >Podsumowanie</h4>
     <p>Uzależnienie od technologii to poważny problem, który może negatywnie wpływać na nasze zdrowie psychiczne i fizyczne. Ważne jest, aby być świadomym swojego korzystania z technologii i podejmować kroki w celu utrzymania zdrowej równowagi między życiem online a offline.</p>
-    <h5>Stworzone przez Julek Ciesiółka </h5>
+    <h5>Stworzone przez Julek  </h5>
     <p>PS:moja pierwsza strona</p>
 
 </body>
