Update title and add iframes to index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pierwsza strona</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 
     <h1>Uzależnienie od technologi</h1>
     <p>Smartfony i tablety: smartfony i tablety mogą stać się głównym sposobem komunikowania się ze światem, a ludzie mogą uzależnić się od ciągłego sprawdzania powiadomień, retweetowania oraz przeglądania mediów społecznościowych i komunikatorów.</p>
@@ -28,6 +29,9 @@
     <p>Uzależnienie od technologii to poważny problem, który może negatywnie wpływać na nasze zdrowie psychiczne i fizyczne. Ważne jest, aby być świadomym swojego korzystania z technologii i podejmować kroki w celu utrzymania zdrowej równowagi między życiem online a offline.</p>
     <h5>Stworzone przez Julek  </h5>
     <p>PS:moja pierwsza strona</p>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GuMrFRsHw-I?si=eD43JWMVV-Vhed50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
+<iframe src="https://www.meteoblue.com/pl/pogoda/widget/three/ip_rumunia_675514?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image&user_key=a1ee0bb0b2b1c4ea&embed_key=797a07b7f9c93d6a&sig=ce57ceb4e62fcc13044db3fa783c3325bb3ff2e7f96c3135441e3d5e3103db0c" frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 460px;height: 572px;border: 0;overflow: hidden;"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/pl/pogoda/tydzie%C5%84/index" target="_blank" rel="noopener">meteoblue</a></div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2552.6812378369154!2d18.82326437693627!3d50.22317690370153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cb002a6a9d19%3A0x650d9f04ebec8c56!2sDOM%20CZAJNIKA%20Sigmy!5e0!3m2!1spl!2spl!4v1761762087189!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<p>Popatrz na ziołowa 12G dom czajnika</p>
